--- a/appview/pages/templates/repo/pulls/fragments/pullNewComment.html
+++ b/appview/pages/templates/repo/pulls/fragments/pullNewComment.html
@@ -1,9 +1,9 @@
 {{ define "repo/pulls/fragments/pullNewComment" }}
-<div 
-  id="pull-comment-card-{{ .RoundNumber }}" 
+<div
+  id="pull-comment-card-{{ .RoundNumber }}"
   class="bg-white dark:bg-gray-800 rounded drop-shadow-sm p-4 relative w-full flex flex-col gap-2">
   <div class="text-sm text-gray-500 dark:text-gray-400">
-    {{ didOrHandle .LoggedInUser.Did .LoggedInUser.Handle }}
+    {{ template "user/fragments/picHandleLink" (didOrHandle .LoggedInUser.Did .LoggedInUser.Handle) }}
   </div>
   <form
     hx-post="/{{ .RepoInfo.FullName }}/pulls/{{ .Pull.PullId }}/round/{{ .RoundNumber }}/comment"
@@ -38,4 +38,3 @@
   </form>
 </div>
 {{ end }}
-
