--- a/appview/pages/templates/repo/commit.html
+++ b/appview/pages/templates/repo/commit.html
@@ -59,7 +59,7 @@
               <div class="flex items-center gap-2 my-2">
                   {{ i "user" "w-4 h-4" }}
                   {{ $committerDidOrHandle := index $.EmailToDidOrHandle $commit.Committer.Email }}
-                  <a href="/{{ $committerDidOrHandle }}">{{ $committerDidOrHandle }}</a>
+                  <a href="/{{ $committerDidOrHandle }}">{{ template "user/fragments/picHandleLink" $committerDidOrHandle }}</a>
               </div>
               <div class="my-1 pt-2 text-xs border-t">
                   <div class="text-gray-600 dark:text-gray-300">SSH Key Fingerprint:</div>
