--- a/appview/pages/templates/repo/issues/fragments/issueComment.html
+++ b/appview/pages/templates/repo/issues/fragments/issueComment.html
@@ -1,9 +1,9 @@
 {{ define "repo/issues/fragments/issueComment" }}
   {{ with .Comment }}
   <div id="comment-container-{{.CommentId}}">
-    <div class="flex items-center gap-2 mb-2 text-gray-500 dark:text-gray-400 text-sm">
+    <div class="flex items-center gap-2 mb-2 text-gray-500 dark:text-gray-400 text-sm flex-wrap">
       {{ $owner := index $.DidHandleMap .OwnerDid }}
-      <a href="/{{ $owner }}" class="no-underline hover:underline">{{ $owner }}</a>
+      {{ template "user/fragments/picHandleLink" $owner }}
 
      <span class="before:content-['·']"></span>
       <a
@@ -18,7 +18,7 @@
           {{ .Created | timeFmt }}
         {{ end }}
       </a>
-      
+
       <!-- show user "hats" -->
       {{ $isIssueAuthor := eq .OwnerDid $.Issue.OwnerDid }}
       {{ if $isIssueAuthor }}
@@ -29,15 +29,15 @@
 
       {{ $isCommentOwner := and $.LoggedInUser (eq $.LoggedInUser.Did .OwnerDid) }}
       {{ if and $isCommentOwner (not .Deleted) }}
-      <button 
-        class="btn px-2 py-1 text-sm" 
+      <button
+        class="btn px-2 py-1 text-sm"
         hx-get="/{{ $.RepoInfo.FullName }}/issues/{{ .Issue }}/comment/{{ .CommentId }}/edit"
         hx-swap="outerHTML"
         hx-target="#comment-container-{{.CommentId}}"
         >
         {{ i "pencil" "w-4 h-4" }}
       </button>
-      <button 
+      <button
         class="btn px-2 py-1 text-sm text-red-500 flex gap-2 items-center group"
         hx-delete="/{{ $.RepoInfo.FullName }}/issues/{{ .Issue }}/comment/{{ .CommentId }}/"
         hx-confirm="Are you sure you want to delete your comment?"
