--- a/appview/pages/templates/repo/log.html
+++ b/appview/pages/templates/repo/log.html
@@ -31,7 +31,7 @@
                     <td class=" py-3 align-top">
                         {{ $didOrHandle := index $.EmailToDidOrHandle $commit.Author.Email }}
                         {{ if $didOrHandle }}
-                            <a href="/{{ $didOrHandle }}" class="text-gray-700 dark:text-gray-300 no-underline hover:underline">{{ $didOrHandle }}</a>
+                            {{ template "user/fragments/picHandleLink" $didOrHandle }}
                         {{ else }}
                             <a href="mailto:{{ $commit.Author.Email }}" class="text-gray-700 dark:text-gray-300 no-underline hover:underline">{{ $commit.Author.Name }}</a>
                         {{ end }}
@@ -159,7 +159,7 @@
                         {{ $didOrHandle := index $.EmailToDidOrHandle $commit.Author.Email }}
                         <a href="{{ if $didOrHandle }}/{{ $didOrHandle }}{{ else }}mailto:{{ $commit.Author.Email }}{{ end }}"
                            class="text-gray-500 dark:text-gray-400 no-underline hover:underline">
-                           {{ if $didOrHandle }}{{ $didOrHandle }}{{ else }}{{ $commit.Author.Name }}{{ end }}
+                           {{ if $didOrHandle }}{{ template "user/fragments/picHandleLink" $didOrHandle }}{{ else }}{{ $commit.Author.Name }}{{ end }}
                         </a>
                     </span>
                     <div class="inline-block px-1 select-none after:content-['·']"></div>
