appview: ingest pipeline records only for repos with spindles configured
also fixes a small UI bug with pipeline symbols on stacked PRs

Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/repo/pulls/fragments/summarizedPullHeader.html
+++ b/appview/pages/templates/repo/pulls/fragments/summarizedPullHeader.html
@@ -17,7 +17,7 @@
         {{ $latestRound := .LastRoundNumber }}
         {{ $lastSubmission := index .Submissions $latestRound }}
         {{ $commentCount := len $lastSubmission.Comments }}
-        {{ if $pipeline }}
+        {{ if and $pipeline $pipeline.Id }}
           <div class="inline-flex items-center gap-2">
             {{ template "repo/pipelines/fragments/pipelineSymbol" $pipeline }}
             <span class="mx-2 before:content-['·'] before:select-none"></span>
