--- a/appview/pages/templates/layouts/repobase.html
+++ b/appview/pages/templates/layouts/repobase.html
@@ -25,7 +25,7 @@
     </section>
 
     <section
-        class="min-h-screen w-full flex flex-col drop-shadow-sm"
+        class="w-full flex flex-col drop-shadow-sm"
     >
         <nav class="w-full pl-4 overflow-auto">
             <div class="flex z-60">
