appview/pages: move fileTree to the left of diff and interdiff
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/layouts/repobase.html
+++ b/appview/pages/templates/layouts/repobase.html
@@ -47,7 +47,7 @@
                              {{ if eq $.Active $key }}
                                 {{ $activeTabStyles }}
                              {{ else }}
-                                group-hover:bg-gray-200 dark:group-hover:bg-gray-700
+                                group-hover:bg-gray-100/25 group-hover:dark:bg-gray-700/25
                              {{ end }}
                              "
                         >
