--- a/appview/pages/templates/layouts/base.html
+++ b/appview/pages/templates/layouts/base.html
@@ -15,19 +15,21 @@
             {{ block "extrameta" . }}{{ end }}
         </head>
         <body class="bg-slate-100 dark:bg-gray-900 dark:text-white transition-colors duration-200">
-          <div class="px-1 grid grid-cols-1 md:grid-cols-12">
-            <div class="col-span-1 md:col-span-2">
-              {{ block "topbarLeft" . }} {{ end }}
+          {{ block "topbarLayout" . }}
+            <div class="px-1 grid grid-cols-1 md:grid-cols-12">
+              <div class="col-span-1 md:col-span-2">
+                {{ block "topbarLeft" . }} {{ end }}
+              </div>
+              <header style="z-index: 20" class="col-span-1 md:col-span-8">
+                {{ block "topbar" . }}
+                  {{ template "layouts/topbar" . }}
+                {{ end }}
+              </header>
+              <div class="col-span-1 md:col-span-2">
+                {{ block "topbarRight" . }} {{ end }}
+              </div>
             </div>
-            <header style="z-index: 20" class="col-span-1 md:col-span-8">
-              {{ block "topbar" . }}
-                {{ template "layouts/topbar" . }}
-              {{ end }}
-            </header>
-            <div class="col-span-1 md:col-span-2">
-              {{ block "topbarRight" . }} {{ end }}
-            </div>
-          </div>
+          {{ end }}
 
           <div class="flex flex-col min-h-screen">
             {{ block "contentLayout" . }}
@@ -59,19 +61,21 @@
             {{ end }}
           </div>
 
-          <div class="px-1 grid grid-cols-1 md:grid-cols-12">
-            <div class="col-span-1 md:col-span-2">
-              {{ block "footerLeft" . }} {{ end }}
+          {{ block "footerLayout" . }}
+            <div class="px-1 grid grid-cols-1 md:grid-cols-12">
+              <div class="col-span-1 md:col-span-2">
+                {{ block "footerLeft" . }} {{ end }}
+              </div>
+              <footer class="mt-16 col-span-1 md:col-span-8">
+                {{ block "footer" . }}
+                  {{ template "layouts/footer" . }}
+                {{ end }}
+              </footer>
+              <div class="col-span-1 md:col-span-2">
+                {{ block "footerRight" . }} {{ end }}
+              </div>
             </div>
-            <footer class="mt-16 col-span-1 md:col-span-8">
-              {{ block "footer" . }}
-                {{ template "layouts/footer" . }}
-              {{ end }}
-            </footer>
-            <div class="col-span-1 md:col-span-2">
-              {{ block "footerRight" . }} {{ end }}
-            </div>
-          </div>
+          {{ end }}
 
         </body>
     </html>
