--- a/appview/pages/templates/layouts/topbar.html
+++ b/appview/pages/templates/layouts/topbar.html
@@ -1,6 +1,6 @@
 {{ define "layouts/topbar" }}
     <nav class="space-x-4 mb-4 px-6 py-2 rounded bg-white dark:bg-gray-800 dark:text-white drop-shadow-sm">
-        <div class="container flex justify-between p-0 items-center">
+        <div class="flex justify-between p-0 items-center">
             <div id="left-items">
                 <a href="/" hx-boost="true" class="flex gap-2 font-semibold italic">
                   tangled<sub>alpha</sub>
