appview/pages: initial support for split diffs
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/repo/compare/compare.html
+++ b/appview/pages/templates/repo/compare/compare.html
@@ -50,7 +50,7 @@
 {{ end }}
 
 {{ define "contentAfter" }}
-  {{ template "repo/fragments/diff" (list .RepoInfo.FullName .Diff) }}
+  {{ template "repo/fragments/diff" (list .RepoInfo.FullName .Diff .DiffOpts) }}
 {{end}}
 
 {{ define "contentAfterLeft" }}
