--- a/appview/pages/templates/repo/fragments/interdiffFiles.html
+++ b/appview/pages/templates/repo/fragments/interdiffFiles.html
@@ -1,6 +1,6 @@
 {{ define "repo/fragments/interdiffFiles" }}
 {{ $fileTree := fileTree .AffectedFiles }}
-<section class="mt-4 p-6 border border-gray-200 dark:border-gray-700 w-full mx-auto rounded bg-white dark:bg-gray-800 drop-shadow-sm">
+<section class="mt-4 px-6 py-2 border border-gray-200 dark:border-gray-700 w-full mx-auto rounded bg-white dark:bg-gray-800 drop-shadow-sm md:min-h-screen text-sm">
   <div class="diff-stat">
     <div class="flex gap-2 items-center">
       <strong class="text-sm uppercase dark:text-gray-200">files</strong>
