--- a/appview/pages/templates/repo/commit.html
+++ b/appview/pages/templates/repo/commit.html
@@ -119,7 +119,7 @@
 {{ end }}
 
 {{ define "contentAfter" }}
-  {{ template "repo/fragments/diff" (list .RepoInfo.FullName .Diff) }}
+  {{ template "repo/fragments/diff" (list .RepoInfo.FullName .Diff .DiffOpts) }}
 {{end}}
 
 {{ define "contentAfterLeft" }}
