--- a/appview/pages/templates/spindles/index.html
+++ b/appview/pages/templates/spindles/index.html
@@ -7,13 +7,25 @@
 
 <section class="bg-white dark:bg-gray-800 p-6 rounded relative w-full mx-auto drop-shadow-sm dark:text-white">
   <div class="flex flex-col gap-6">
-    {{ block "all" . }} {{ end }}
+    {{ block "about" . }} {{ end }}
+    {{ block "list" . }} {{ end }}
     {{ block "register" . }} {{ end }}
   </div>
 </section>
 {{ end }}
 
-{{ define "all" }}
+{{ define "about" }}
+  <section class="rounded flex flex-col gap-2">
+    <p class="dark:text-gray-300">
+      Spindles are small CI runners.
+      <a href="https://tangled.sh/@tangled.sh/core/blob/master/docs/spindle/hosting.md">
+        Checkout the documentation if you're interested in self-hosting.
+      </a>
+    </p>
+  </section>
+{{ end }}
+
+{{ define "list" }}
   <section class="rounded w-full flex flex-col gap-2">
     <h2 class="text-sm font-bold py-2 uppercase dark:text-gray-300">your spindles</h2>
     <div class="flex flex-col rounded border border-gray-200 dark:border-gray-700 w-full">
