--- a/appview/pages/templates/repo/compare/compare.html
+++ b/appview/pages/templates/repo/compare/compare.html
@@ -54,7 +54,10 @@
 {{end}}
 
 {{ define "contentAfterLeft" }}
-  <div class="sticky top-0">
-  {{ template "repo/fragments/diffChangedFiles" .Diff }}
+  <div class="flex flex-col gap-4 col-span-1 md:col-span-2 mt-4">
+    {{ template "repo/fragments/diffOpts" .DiffOpts }}
+  </div>
+  <div class="sticky top-0 mt-4">
+    {{ template "repo/fragments/diffChangedFiles" .Diff }}
   </div>
 {{end}}
