--- a/appview/pages/templates/repo/pulls/interdiff.html
+++ b/appview/pages/templates/repo/pulls/interdiff.html
@@ -72,7 +72,10 @@
 {{end}}
 
 {{ define "contentAfterLeft" }}
-  <div class="sticky top-0">
+  <div class="flex flex-col gap-4 col-span-1 md:col-span-2 mt-4">
+    {{ template "repo/fragments/diffOpts" .DiffOpts }}
+  </div>
+  <div class="sticky top-0 mt-4">
     {{ template "repo/fragments/interdiffFiles" .Interdiff }}
   </div>
 {{end}}
