--- a/appview/pages/templates/repo/log.html
+++ b/appview/pages/templates/repo/log.html
@@ -102,14 +102,14 @@
                     <div class="text-base cursor-pointer">
                         <div class="flex items-center justify-between">
                             <div class="flex-1">
-                                <div class="inline-flex items-end">
+                                <div>
                                     <a href="/{{ $.RepoInfo.FullName }}/commit/{{ $commit.Hash.String }}"
                                        class="inline no-underline hover:underline dark:text-white">
                                        {{ index $messageParts 0 }}
                                     </a>
                                     {{ if gt (len $messageParts) 1 }}
                                         <button
-                                            class="py-1/2 px-1 bg-gray-200 hover:bg-gray-400 rounded dark:bg-gray-700 dark:hover:bg-gray-600 ml-2"
+                                            class="py-1/2 px-1 bg-gray-200 hover:bg-gray-400 rounded dark:bg-gray-700 dark:hover:bg-gray-600"
                                             hx-on:click="this.parentElement.nextElementSibling.classList.toggle('hidden')">
                                             {{ i "ellipsis" "w-3 h-3" }}
                                         </button>
