appview: minor edits to copy text
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/knots/index.html
+++ b/appview/pages/templates/knots/index.html
@@ -19,7 +19,7 @@
     <p class="dark:text-gray-300">
       Knots are lightweight headless servers that enable users to host Git repositories with ease.
       Knots are designed for either single or multi-tenant use which is perfect for self-hosting on a Raspberry Pi at home, or larger “community” servers.
-      By default, Tangled provides managed knots where you can host your repositories for free.
+      When creating a repository, you can choose a knot to store it on.
       <a href="https://tangled.sh/@tangled.sh/core/blob/master/docs/knot-hosting.md">
         Checkout the documentation if you're interested in self-hosting.
       </a>
