--- a/appview/pages/templates/user/fragments/repoCard.html
+++ b/appview/pages/templates/user/fragments/repoCard.html
@@ -47,7 +47,7 @@
   {{ end }}
   {{ with .PullCount.Open }}
       <div class="flex gap-1 items-center text-sm">
-          {{ i "git-pull-request-arrow" "w-3 h-3" }}
+          {{ i "git-pull-request" "w-3 h-3" }}
           <span>{{ . }}</span>
       </div>
   {{ end }}
